--- a/frontend/style.css
+++ b/frontend/style.css
@@ -28,6 +28,7 @@
     justify-content: space-evenly;
     cursor: pointer;
     transition: 1.1s;
+    z-index: 9900;
 
 }
 
@@ -175,6 +176,7 @@ header{
     top: 0;
     right: -20rem;
     transition: all 1s;
+    z-index: 9800;
 }
 
 .show-menu .sidebar{
@@ -315,5 +317,93 @@ header{
     object-fit: cover;
     width: 100%;
 }
+.projetos{
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 2rem;
+}
+
+.card {
+    width: 18rem;
+    height: 25rem;
+    position: relative;
+  }
+  
+  .card-img-wrapper {
+    width: 100%;
+    height: 100%;
+    background-color: #262626;
+    border-radius: 0.5rem;
+  }
+
+  .card-img-wrapper img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    opacity: 0.8;
+    transition: opacity 0.3s;
+  }
+
+  .card:hover .card-img-wrapper img {
+    opacity: 0.5;
+  }
+
+  .card-info{
+      position: absolute;
+      bottom: 0;
+      opacity: 0;
+      visibility: hidden;
+      padding:  2rem;
+      text-shadow:  0 0.1rem 0.3rem rgba(0, 0, 0, .4);
+      transition: all .3s;
+  }
+
+  .card-info h2{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+}
+
+.card-info h3{
+    font-family: var(--font-secundary);
+    font-weight:bolder;
+    color: #ff4081;
+    margin-bottom: 1.5rem;
+}
+.card-info p{
+    font-family: var(--font-secundary);
+    color: #eee;
+    font-weight: 400;
+    width: 80%;
+    margin-bottom: 2rem;
+}
+
+.card-info button {
+    width: 8rem;
+    background: #AA076B;  
+    background: -webkit-linear-gradient(to right, #61045F, #AA076B); 
+    background: linear-gradient(to left, #61045F, #AA076B);
+    font-family: var(--font-action);
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+    
+}
+
+.card-info button {
+    width: 8rem;
+    height: 2.5rem;
+  }
+
+.card:hover .card-info{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
+
+  
 
 
