--- a/frontend/style.css
+++ b/frontend/style.css
@@ -14,6 +14,9 @@
     --font-secundary: "Josefin Slab", serif;
     --font-action: "Mulish", serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 
 .hamburg{
     /* background-color: #61045F; */
@@ -565,4 +568,54 @@ header{
     cursor: pointer;
     grid-column: 2;
 }
+
+footer{
+    width: 100%;
+    height: 7rem;
+    background-color: #262626;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-content p{
+    font-family: var(--font-secundary);
+    color: #a7a7a7;
+    font-size: 1.2rem;
+}
+
+.social-list a{
+    margin: 0 2rem;
+    color: #a7a7a7;
+    font-size: 1.3rem;
+}
+
+.social-list ul{
+    display: flex;
+}
+
+#link-topo{
+    position: fixed;
+    right: 3rem;
+    bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
+    background: #AA076B;  
+    background: -webkit-linear-gradient(to right, #61045F, #AA076B); 
+    background: linear-gradient(to left, #61045F, #AA076B);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: .3rem;
+    box-shadow: 0 0.1rem 0.6rem #00000009;
+}
+
+
 
